完成注册表读取相关

--- a/winver.vcxproj
+++ b/winver.vcxproj
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="RegistryError.cpp" />
+    <ClCompile Include="RegistryHelper.cpp" />
     <ClCompile Include="winver.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RegistryError.h" />
+    <ClInclude Include="RegistryHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
